# pingcap-rust-exercises

./: Cargo.toml  send_ping.py  serialize_output.txt
src/: bb4_exercise2.rs  exercise_2.rs  exercise_3.rs  exercise_4_redis.rs  exercise_5_client.rs  exercise_5_server.rs  main.rs  moves.bson
