[package]
name = "pingcap_exercises"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "exercise_1"
path = "src/exercise_1.rs"

[[bin]]
name = "exercise_2"
path = "src/exercise_2.rs"

[[bin]]
name = "exercise_3"
path = "src/exercise_3.rs"

[[bin]]
name="exercise_4_redis"
path = "src/exercise_4_redis.rs"
  
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "0.8.1"
serde = {version="1.0.196", features=["derive"] }
serde_json = "1.0.113"
bson = "2.9.0"

